--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html>
     <head>
         <title>첫 홈페이지</title>
+        <style>
+            body{
+                margin:0;
+                padding:0;
+            }
+            ul{
+               background:skyblue;
+               margin:0;
+               padding: 10px;
+            }
+            li{
+                display: inline-block;
+                margin:20px
+            }
+        </style>
     </head>
     <body>
-        <a href="ex02.html">로그인</a>
-        <a href="ex03.html">회원가입</a>
-        <h1 title="h1태그로 작성됨">1장 홈페이지 만들기</h1>
-		<h2>1절 HTML 언어</h2>
-		<h3>1. 웹</h3>
-		<h4>1.1 인터넷</h4>
-		<h5>1.1.1 네트워크</h5>
-		<h6>1.1.1.1. 통신</h6>
+        <!--
+        <ol>
+            <li><a href="ex02.html">로그인</a></li>
+            <li><a href="ex03.html">회원가입</a></li>
+        </ol>
+        -->
+        <ul>
+            <li><a href="ex02.html">로그인</a></li>
+            <li><a href="ex03.html">회원가입</a></li>
+        </ul>
+
+        <div><img src="img/sky.jpg" width="300px" /></div>        
 
         <h2> 비 온다던 일기예보가 맞지 않는 이유는?</h2>
         <p><b>일기예보에서 예측한 비가 실제로 오지 않는 이유는 여러 가지가 있습니다.</b> 날씨 예측은 매우 복잡한 과학이며, 작은 변수 하나만 바뀌어도 결과가 달라질 수 있기 때문입니다. 구체적으로 이유를 정리하면 다음과 같습니다:</p>
