--- a/ex02.html
+++ b/ex02.html
@@ -38,7 +38,20 @@
             <a href="ex03.html"><button>회원가입</button></a>
         </div>
     </div>
+<div class="box">
+        <h3>비밀번호 찾기</h3>
+        <hr />
 
+        <div style="margin-bottom: 10px;">
+            <label style="width: 100px; display: inline-block;">이메일</label>
+            <input type="email" placeholder="이메일" />
+        </div>
+
+        <div style="margin-bottom: 10px;">
+            <label style="width: 100px; display: inline-block;"></label>
+            <button>비밀번호 찾기</button>
+        </div>
+</div>
 </body>
 
 </html>
