메뉴스타일변경

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
             }
             li{
                 display: inline-block;
-                margin:20px
+                margin:20px;
+                width:100px;
+                height: 50px;
+                line-height: 50px;
+                background:white;
+            }
+            li:hover{
+                background:lightblue;
+            }
+            li a{
+                text-decoration:none;
+                color:navy;
+            }
+            li a:hover{
+                color:rgb(255, 255, 255);
             }
         </style>
     </head>
@@ -26,8 +40,8 @@
         </ol>
         -->
         <ul>
-            <li><a href="ex02.html">로그인</a></li>
-            <li><a href="ex03.html">회원가입</a></li>
+            <li><a href="ex02.html"><center>로그인</center></a></li>
+            <li><a href="ex03.html"><center>회원가입</center></a></li>
         </ul>
 
         <div><img src="img/sky.jpg" width="300px" /></div>        
